# C-Pandemic

./: CMakeLists.txt  README.md  assignment.ad
agents/: bigger-Copy.csv
src/: agents_parser.c  agents_parser.h  main.c  simulation.c  simulation.h  utilities.c  utilities.h  world_parser.c  world_parser.h
tests/: mainwrap.h  tests-nanecisto.c  utils_for_tests.c  utils_for_tests.h
worlds/: bigger - Copy.csv
